--- a/package.json
+++ b/package.json
@@ -5,15 +5,18 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "test": "echo 'No Test!'",
     "lint": "vue-cli-service lint",
-    "test": "echo 'No Test!'"
+    "i18n:report": "vue-cli-service i18n:report --src './src/**/*.?(js|vue)' --locales './src/locales/**/*.json'"
   },
   "dependencies": {
     "axios": "^0.18.0",
     "vue": "^2.6.6",
+    "vue-i18n": "^8.0.0",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
+    "@kazupon/vue-i18n-loader": "^0.3.0",
     "@vue/cli-plugin-babel": "~3.9.2",
     "@vue/cli-plugin-eslint": "~3.9.2",
     "@vue/cli-service": "~3.9.3",
@@ -24,6 +27,7 @@
     "lodash": "^4.17.13",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
+    "vue-cli-plugin-i18n": "^0.6.0",
     "vue-template-compiler": "^2.5.21"
   }
 }
