--- a/package.json
+++ b/package.json
@@ -1,12 +1,9 @@
 {
   "name": "ccip-puzzle-chocolate",
   "version": "0.0.1",
-  "description": "Puzzle game of CCIP project (Refactoring from ccip-puzzle-bueno)",
-  "main": "index.js",
-  "repository": "https://github.com/CCIP-App/CCIP-Puzzle-Chocolate",
-  "author": "Erickson Zhuang <bingluen0224@gmail.com>",
-  "license": "GPL-3.0",
   "private": true,
+  "description": "Puzzle game of CCIP project (Refactoring from ccip-puzzle-bueno)",
+  "author": "Erickson Zhuang <bingluen0224@gmail.com>",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -14,6 +11,7 @@
     "lint": "vue-cli-service lint",
     "i18n:report": "vue-cli-service i18n:report --src './src/**/*.?(js|vue)' --locales './src/locales/**/*.json'"
   },
+  "main": "index.js",
   "dependencies": {
     "axios": "^0.18.1",
     "vue": "^2.6.6",
@@ -31,9 +29,13 @@
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
     "lodash": "^4.17.13",
+    "prerender-spa-plugin": "^3.2.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "vue-cli-plugin-i18n": "^0.6.0",
+    "vue-cli-plugin-prerender-spa": "^1.1.6",
     "vue-template-compiler": "^2.5.21"
-  }
+  },
+  "license": "GPL-3.0",
+  "repository": "https://github.com/CCIP-App/CCIP-Puzzle-Chocolate"
 }
