--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "test": "echo 'No Test!'",
     "lint": "vue-cli-service lint",
-    "i18n:report": "vue-cli-service i18n:report --src './src/**/*.?(js|vue)' --locales './src/locales/**/*.json'"
+    "i18n:report": "vue-cli-service i18n:report --src './src/**/*.?(js|vue)' --locales './src/locales/**/*.json'",
+    "test": "echo 'No Test!'"
   },
   "main": "index.js",
   "dependencies": {
     "axios": "^0.18.1",
+    "core-js": "^3.4.4",
     "vue": "^2.6.6",
     "vue-i18n": "^8.0.0",
     "vue-router": "^3.0.1",
@@ -21,9 +22,9 @@
   },
   "devDependencies": {
     "@kazupon/vue-i18n-loader": "^0.3.0",
-    "@vue/cli-plugin-babel": "~3.9.2",
-    "@vue/cli-plugin-eslint": "~3.9.2",
-    "@vue/cli-service": "~3.9.3",
+    "@vue/cli-plugin-babel": "^4.1.2",
+    "@vue/cli-plugin-eslint": "^4.1.2",
+    "@vue/cli-service": "^4.1.2",
     "@vue/eslint-config-standard": "^4.0.0",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.8.0",
