--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "axios": "^0.18.1",
     "core-js": "^3.4.4",
+    "qr-scanner": "^1.1.1",
     "vue": "^2.6.6",
     "vue-i18n": "^8.0.0",
     "vue-router": "^3.0.1",
