--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
   "dependencies": {
     "axios": "^0.18.1",
     "core-js": "^3.4.4",
-    "qr-scanner": "^1.1.1",
     "vue": "^2.6.6",
     "vue-i18n": "^8.0.0",
+    "vue-qrcode-reader": "^2.3.11",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.1"
   },
